# chat-gipitty

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  build_deb.sh  command_test.ps1  install.ps1  test_file.sh  test_interactive.sh
.github/workflows/: hb_release.yml  macos_tarballs.yml  release_assets.yml
assets/: piping.tape
book/: book.toml
book/src/: SUMMARY.md  advanced-usage.md  agent-command.md  api-compatibility.md  basic-usage.md  cli-options.md  config-command.md  configuration.md  contributing.md  core-features.md  custom-api-endpoints.md  development-workflow.md  embedding-command.md  environment-variables.md  examples.md  file-input.md  getting-started.md  image-analysis.md  image-command.md  installation.md  introduction.md  model-selection.md  piping-context.md  session-command.md  session-management.md  setup.md  subcommands.md  system-prompts.md  text-processing.md  tts-command.md  upgrade-command.md  view-command.md  voice-synthesis.md  web-search.md
book/theme/: custom.css
docs/: 404.html  AGENT_SUBCOMMAND.md  EMBEDDING_SUBCOMMAND.md  IMAGE_SUBCOMMAND.md  RELEASE_PROCESS.md  TTS_SUBCOMMAND.md  advanced-usage.html  agent-command.html  api-compatibility.html  basic-usage.html  cgip.1  cli-options.html  config-command.html  configuration.html  contributing.html  core-features.html  custom-api-endpoints.html  development-workflow.html  embedding-command.html  environment-variables.html  examples.html  file-input.html  getting-started.html  image-analysis.html  image-command.html  index.html  installation.html  introduction.html  model-selection.html  piping-context.html  print.html  reference.html  searchindex.js  session-command.html  session-management.html  setup.html  subcommands.html  supported-models.html  system-prompts.html  text-processing.html  (+8 more)
docs/theme/: custom.css
notes/: 0.13.md  0.4.0.md  0.5.0.md  v0.5.0_linkedin.md
scripts/: build_deb.sh  cgip.rb  homebrew.sh  install.sh  publish_asset.sh
src/: app.rs  args.rs  cache.rs  chat.rs  chatgpt.rs  cli.rs  config_manager.rs  main.rs  printer.rs  session.rs  tui.rs  utils.rs
src/chatgpt/: client.rs  message.rs  mod.rs  request.rs  response.rs  role.rs
src/client/: anthropic.rs  client.rs  mistral.rs  mod.rs  openai.rs  prompt.txt  test.rs
src/clients/: mod.rs
src/clients/openai/: chat_completions.rs  mod.rs  model_info.rs  types.rs
src/components/: chat_list_item.rs  mod.rs
src/sub/: agent.rs  config.rs  embedding.rs  image.rs  mod.rs  session.rs  tts.rs  upgrade.rs  view.rs
