[package]
name = "cgip"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/divanvisagie/chat-gipity"
authors = ["Divan Visagie <me@divanv.com>"]
license = "Apache-2.0"
description = "Terminal client for interacting with Chat GPT that allows you to build and manipulate contexts"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
serde_yaml = "0.8"
dirs = "5.0.1"
config = "0.14.0"
toml = "0.8.12"
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4"] }
